tests/ui/half-open-range-patterns/half-open-range-pats-inclusive-dotdotdot-bad-syntax.stderr
error: range-to patterns with `...` are not allowed
  --> $DIR/half-open-range-pats-inclusive-dotdotdot-bad-syntax.rs:15:9
   |
LL |         ...X => {}
   |         ^^^ help: use `..=` instead

error: range-to patterns with `...` are not allowed
  --> $DIR/half-open-range-pats-inclusive-dotdotdot-bad-syntax.rs:16:9
   |
LL |         ...0 => {}
   |         ^^^ help: use `..=` instead

error: range-to patterns with `...` are not allowed
  --> $DIR/half-open-range-pats-inclusive-dotdotdot-bad-syntax.rs:17:9
   |
LL |         ...'a' => {}
   |         ^^^ help: use `..=` instead

error: range-to patterns with `...` are not allowed
  --> $DIR/half-open-range-pats-inclusive-dotdotdot-bad-syntax.rs:18:9
   |
LL |         ...0.0f32 => {}
   |         ^^^ help: use `..=` instead

error: range-to patterns with `...` are not allowed
  --> $DIR/half-open-range-pats-inclusive-dotdotdot-bad-syntax.rs:25:17
   |
LL | /     macro_rules! mac {
LL | |         ($e:expr) => {
LL | |             let ...$e;
   | |                 ^^^ help: use `..=` instead
LL | |         }
LL | |     }
   | |_____- in this expansion of `mac!`
LL |
LL |       mac!(0);
   |       ------- in this macro invocation

error: aborting due to 5 previous errors

